# HashEnsemble

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
3rd/include/: Platform.cpp  Platform.h  Spooky.h  xxh3.h  xxhash.c  xxhash.h
benchmarks/: benchmark.h  hashensemble_benchmark.cpp  random.h
scripts/: before_install.linux.sh  before_install.osx.sh  install_dependencies.sh
src/: hashensemble.h  utils.h
test/: hashensemble_example.cpp
